# tsm

./: .gitignore  AGENTS.md  SESSION-PROMPTS.md  SESSIONSTATE.md  SETUP-GUIDE.md  SPECIFICATION-task-session-manager-v1.6.md  SPECIFICATION.md  TASKS-COMPLETED.md  TASKS.md  TASKS.md.bak_encoding  _debug_reorder.py  _debug_reorder2.py  pyproject.toml
docs/: README.md
dummy_data/todo_app/: AGENTS.md  SESSIONSTATE.md  SPECIFICATION.md  TASKS-COMPLETED.md  TASKS.md
governance_docs/: AGENTS.md  SESSIONSTATE.md  TASKS-COMPLETED.md  TASKS.md
governance_docs_old/: SESSION-PROMPTS.md  SETUP-GUIDE.md  SPECIFICATION-task-session-manager-v1.4.md
plans/: subdirectory-support-design.md
tests/: __init__.py  test_cli.py  test_deps.py  test_project_discovery.py  test_shadow.py
tests/commands/: test_advance.py  test_complete_phase.py  test_help.py  test_init_phase.py  test_new_project.py  test_phase.py  test_repair.py  test_status.py  test_task.py  test_undo.py  test_vibe_check.py
tests/fixtures/: SESSIONSTATE.md  TASKS-COMPLETED.md  TASKS.md  TASKS_CLEAN.md  TASKS_ERRORS.md
tests/parsers/: test_completed_parser.py  test_session_parser.py  test_tasks_parser.py
tests/writers/: __init__.py  test_completed_writer.py  test_session_writer.py  test_tasks_writer.py
tsm/: __init__.py  __main__.py  app.py  deps.py  models.py  project.py  shadow.py
tsm/commands/: __init__.py  advance.py  complete_phase.py  deps.py  help.py  init_phase.py  new_project.py  phase.py  repair.py  status.py  task.py  undo.py  vibe_check.py
tsm/parsers/: __init__.py  completed_parser.py  (+2 more)
(+12 files in other folders)
